--- a/WEBDEV2-2/hobbiesAndInterests.html
+++ b/WEBDEV2-2/hobbiesAndInterests.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     </head>
     <body>
-        <!-- Start Of Div Main -->
+    <!-- Start Of Div Main -->
     <div class="main">
         <!-- Start Of Div Header -->
         <div class="header">
@@ -28,32 +28,32 @@
             <!-- End Of Div Header -->
             <!-- Start Of Div Content -->
             <div class="content">
-                <h1>Hobbies & Interests</h1>
-                    <ol style="list-style-type:disc">
-                        <li>Football</li>
-                        <li>Games</li>
-                        <li>Meditation</li>
-                        <li>Computers (Hardware & Software)</li>
-                        <li>Fantasy Books</li>
-                    </ol>  
-                </div>
-                <!-- End Of Div Content -->
-                <!-- Start Of Div Footer -->
-                <div class="footer">
-                <hr>
+                <h1 class="colourband">Hobbies & Interests</h1>
+                <ol style="list-style-type:disc">
+                    <li>Football</li>
+                    <li>Games</li>
+                    <li>Meditation</li>
+                    <li>Computers (Hardware & Software)</li>
+                    <li>Fantasy Books</li>
+                </ol>  
+            </div>
+            <!-- End Of Div Content -->
+            <!-- Start Of Div Footer -->
+            <div class="footer">
+            <hr>
                 <!-- Start Of Div Social Icons -->
                 <div class="social-icons">
-                        <a class="facebook" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-                        <a class="twitter" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
-                        <a class="googleplus" href="https://plus.google.com/discover"><i class="fab fa-google-plus"></i></a>
-                        <a class="linkedin" href="https://ie.linkedin.com/"><i class="fab fa-linkedin"></i></a>
-                        <a class="github" href="https://github.com/"><i class="fab fa-github-square"></i></a>
-                    </div>
-                    <!-- End Of Div Social Icons -->
-                </div>  
-                <!-- End Of Div Footer -->
-            </div>
-            <!-- End Of Div Main -->
-        </body>
+                    <a class="facebook" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+                    <a class="twitter" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
+                    <a class="googleplus" href="https://plus.google.com/discover"><i class="fab fa-google-plus"></i></a>
+                    <a class="linkedin" href="https://ie.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+                    <a class="github" href="https://github.com/"><i class="fab fa-github-square"></i></a>
+                </div>
+                <!-- End Of Div Social Icons -->
+            </div>  
+            <!-- End Of Div Footer -->
+        </div>
+        <!-- End Of Div Main -->
+    </body>
 </html>   
 
