--- a/WEBDEV2-2/profile.html
+++ b/WEBDEV2-2/profile.html
@@ -8,8 +8,11 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     </head>
         <body>
+            <!-- Start Of Div Main -->
             <div class="main">
+                <!-- Start Of Div Header -->
                 <div class="header">
+                    <!-- Start Of Unordered List -->
                     <ul>
                         <li><a href="index.html"><i class="fas fa-home"></i></a></li>
                         <li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
@@ -21,14 +24,20 @@
                         <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
                         <li><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
                     </ul>
+                    <!-- End Of Unordered List -->
                 </div>
+                <!-- End Of Div Header -->
+                <!-- Start Of Div Content -->
                 <div class="content">
-                    <h1>Profile</h1>
+                    <h1 class="colourband">Profile</h1>
                         <p>Upcoming Software Developer with in-company application development experience, college studies and self study.  Experience in both <i>Software Testing</i> and <i>Software Development</i>.  Trained using <b>Agile</b> methodology.  Languages include <strong>Java</strong>, <em>C#</em> and <strong>SQL</strong>.  Proficient in various Microsoft Azure Cognitive Services.  In my spare time I am learning JavaScript along with Node.js.  I am also interested in learning Ruby and Ruby on Rails.  All my code is available to view on my GitHub Account: https://github.com/StephenGregan.</p>
                 </div>
+                <!-- End Of Div Content -->
+                <!-- Start Of Div Footer -->
                 <div class="footer">
                      <br>
                     <hr>
+                    <!-- Start Of Div Social Icons -->
                     <div class="social-icons">
                         <a class="facebook" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
                         <a class="twitter" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
@@ -36,8 +45,11 @@
                         <a class="linkedin" href="https://ie.linkedin.com/"><i class="fab fa-linkedin"></i></a>
                         <a class="github" href="https://github.com/"><i class="fab fa-github-square"></i></a>
                     </div>
+                    <!-- End Of Div Social Icons -->
                 </div>  
+                <!-- End Of Div Footer -->
             </div>
+            <!-- End Of Div Main -->
     </body>
 </html>   
 
