--- a/WEBDEV2-2/selfStudies.html
+++ b/WEBDEV2-2/selfStudies.html
@@ -8,8 +8,11 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     </head>
         <body>
+            <!-- Start Of Div Main -->
             <div class="main">
+                <!-- Start Of Div Header -->
                 <div class="header">
+                    <!-- Start Of Unordered List -->
                     <ul>
                         <li><a href="index.html"><i class="fas fa-home"></i></a></li>
                         <li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
@@ -21,9 +24,13 @@
                         <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
                         <li><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
                     </ul>
+                    <!-- End Of Unordered List -->
                 </div>
+                <!-- End Of Div Header -->
+                <!-- Start Of Div Content -->
                 <div class="content">
-                    <h1>Self Studies</h1>
+                    <h1 class="colourband">Self Studies</h1>
+                        <!-- Start Of Table Center -->
                        <table class="center">
                             <tr>
                                 <th><b>Book Name</b></th>
@@ -46,11 +53,15 @@
                                 <td>Jeanne Boyarsky & Scott Selikoff</td>
                             </tr>
                         </table>
+                        <!-- End Of Table Center -->
                 </div>
+                <!-- End Of Div Content -->
+                <!-- Start Of Div Footer -->
                 <div class="footer">
                      <!-- <img src="C:\Users\Stephen\Desktop\_WEBDEV\WEBLAB1-3\img\3A4wkht.png" alt="Mr Robot" width="500" height="500"> -->
                      <br>
                     <hr>
+                    <!-- Start Of Div Social Icons -->
                     <div class="social-icons">
                         <a class="facebook" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
                         <a class="twitter" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
@@ -58,8 +69,11 @@
                         <a class="linkedin" href="https://ie.linkedin.com/"><i class="fab fa-linkedin"></i></a>
                         <a class="github" href="https://github.com/"><i class="fab fa-github-square"></i></a>
                     </div>
+                    <!-- End Of Div Social Icons -->
                 </div>  
+                <!-- End Of Div Footer -->
             </div>
+            <!-- End Of Div Main -->
         </body>
 </html>   
 
