--- a/WEBLAB1-3/hobbiesAndInterests.html
+++ b/WEBLAB1-3/hobbiesAndInterests.html
@@ -4,7 +4,9 @@
         <title>CV: Stephen Gregan</title>
     </head>
         <body>
+            <!-- Start Of Div Main -->
             <div class="main">
+                <!-- Start Of Div Header -->
                 <div class="header">
                     <a href="index.html">Home</a>    
                         <a href="homepage.html">CV Page</a>
@@ -16,6 +18,8 @@
                         <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
                         <a href="contactInformation.html">Contact Information</a>
                 </div>
+                <!-- End Of Div Header -->
+                <!-- Start Of Div Content -->
                 <div class="content">
                     <h1>Hobbies & Interests</h1>
                          <ul style="list-style-type:disc">
@@ -27,10 +31,14 @@
                         </ul>  
                         <hr>
                 </div>
+                <!-- End Of Div Content -->
+                <!-- Start Of Div Footer -->
                 <div class="footer">
                      <img src="C:\Users\Stephen\Desktop\_WEBDEV\WEBLAB1-3\img\3A4wkht.png" alt="Mr Robot" width="500" height="500">
                 </div>  
+                <!-- End Of Div Footer -->
             </div>
+            <!-- End Of Div Main -->
         </body>
 </html>   
 
