--- a/WEBLAB1-3/selfStudies.html
+++ b/WEBLAB1-3/selfStudies.html
@@ -5,7 +5,9 @@
         <link rel="stylesheet" type="text/css" href="C:\Users\Stephen\Desktop\_WEBDEV\WEBLAB1-3\css\style.css">
     </head>
         <body>
+            <!-- Start Of Div Main -->
             <div class="main">
+                <!-- Start Of Div Header -->
                 <div class="header">
                     <a href="index.html">Home</a>    
                         <a href="homepage.html">CV Page</a>
@@ -17,8 +19,11 @@
                         <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
                         <a href="contactInformation.html">Contact Information</a>
                 </div>
+                <!-- End Of Div Header -->
+                <!-- Start Of Div Content -->
                 <div class="content">
                     <h1>Self Studies</h1>
+                        <!-- Start Of Table Center -->
                        <table class="center">
                             <tr>
                                 <th><b>Book Name</b></th>
@@ -41,12 +46,17 @@
                                 <td>Jeanne Boyarsky & Scott Selikoff</td>
                             </tr>
                         </table>
+                        <!-- End Of Table Center -->
                         <hr>
                 </div>
+                <!-- End Of Div Content -->
+                <!-- Start Of Div Footer -->
                 <div class="footer">
                      <img src="C:\Users\Stephen\Desktop\_WEBDEV\WEBLAB1-3\img\3A4wkht.png" alt="Mr Robot" width="500" height="500">
                 </div>  
+                <!-- End Of Div Footer -->
             </div>
+            <!-- End Of Div Main -->
         </body>
 </html>   
 
