--- a/WEBLAB1-3/skills.html
+++ b/WEBLAB1-3/skills.html
@@ -4,7 +4,9 @@
         <title>CV: Stephen Gregan</title>
     </head>
         <body>
+        	<!-- Start Of Div Main -->
             <div class="main">
+            	<!-- Start Of Div Header -->
                 <div class="header">
 	                <a href="index.html">Home</a>    
                         <a href="homepage.html">CV Page</a>
@@ -16,8 +18,11 @@
                         <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
                         <a href="contactInformation.html">Contact Information</a>
 	                </div>
+	                <!-- End Of Div Header -->
+	                <!-- Start Of Div Content -->
 	                <div class="content">
 	                    <h1>Skills</h1>
+	                    	<!-- Ordered List -->
 	                        <ol class="skillscontent" style="list-style-type:disc">
 	                            <li>Flexible and Adaptable</li>
 	                            <li>Enthusiastic and Committed</li>
@@ -26,9 +31,13 @@
 	                            <li>Work efficiently both independently and as part of a teams</li>
 	                            <li>Analytically focused, a good listener and a quick learner who enjoys challenges</li>
 	                        </ol>  
+	                        <!-- End Of Ordered List -->
 	                </div>
+	                <!-- End Of Div Content -->
+	                <!-- Start Of Div Footer -->
 	                <div class="footer">
 	                    <hr>
+	                    <!-- Start Of Div Social Icons -->
 	                    <div class="social-icons">
 	                        <a class="facebook" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
 	                        <a class="twitter" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
@@ -36,8 +45,11 @@
 	                        <a class="linkedin" href="https://ie.linkedin.com/"><i class="fab fa-linkedin"></i></a>
 	                        <a class="github" href="https://github.com/"><i class="fab fa-github-square"></i></a>
 	                    </div>
-	                </div>  
+	                    <!-- End Of Div Social Icons -->
+	                </div>
+	                <!-- End Of Div Footer -->
 	            </div>
+	            <!-- End Of Div Main -->
 	        </body>
 	</html>   
 
