--- a/WEBDEV2-2/education.html
+++ b/WEBDEV2-2/education.html
@@ -29,7 +29,7 @@
             <!-- End Of Div Header -->
             <!-- Start Of Div Content -->
             <div class="content">
-                <h1>Education</h1>
+                <h1 class="colourband">Education</h1>
                 <h2><i>CCT College Dublin</h2>
                 <h3><i>Higher Diploma in Science in Computing</h3>
                 <h4><i>September 2018 - August 2020</h4>
@@ -47,7 +47,7 @@
             </div>
             <!-- End Of Div Content -->
             <!-- Start Of Div Footer -->
-            <div class="footer">
+        <div class="footer">
             <br>
             <hr>
             <!-- Start Of Div Social Icons -->
@@ -60,6 +60,7 @@
             </div>
             <!-- End Of Social Icons -->
         </div>  
+        <!-- End Of Div Main -->
     </body>
 </html>   
 
