--- a/WEBDEV2-2/workExperience.html
+++ b/WEBDEV2-2/workExperience.html
@@ -8,8 +8,11 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     </head>
         <body>
+            <!-- Start Of Div Main -->
             <div class="main">
+                <!-- Start Of Div Header -->
                 <div class="header">
+                    <!-- Start Of Unordered List -->
                     <ul>
                         <li><a href="index.html"><i class="fas fa-home"></i></a></li>
                         <li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
@@ -21,26 +24,35 @@
                         <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
                         <li><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
                     </ul>
-                    </div>
-                    <div class="content">
-                        <h1>Work Experience</h1>
-                            <h2><i>Translation.ie</h2>
-                                <h3><i>Software Developer</h3>
-                                    <h4>April 2018 - September 2018</h4>
-                                        <small>I was working as a developer using Microsoft Cognitive Services.  All my coding in company was in C#.</small>
-                    </div>
-                    <div class="footer">
-                         <br>
-                        <hr>
-                        <div class="social-icons">
-                                <a class="facebook" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-                                <a class="twitter" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
-                                <a class="googleplus" href="https://plus.google.com/discover"><i class="fab fa-google-plus"></i></a>
-                                <a class="linkedin" href="https://ie.linkedin.com/"><i class="fab fa-linkedin"></i></a>
-                                <a class="github" href="https://github.com/"><i class="fab fa-github-square"></i></a>
-                            </div>
-                    </div>  
+                <!-- End Of Unordered List -->
                 </div>
-            </body>
+                <!-- End Of Div Header -->
+                <!-- Start Of Div Content -->
+                <div class="content">
+                    <h1 class="colourband">Work Experience</h1>
+                    <h2><i>Translation.ie</h2>
+                    <h3><i>Software Developer</h3>
+                    <h4>April 2018 - September 2018</h4>
+                    <small>I was working as a developer using Microsoft Cognitive Services.  All my coding in company was in C#.</small>
+                </div>
+                <!-- End Of Div Content -->
+                <!-- Start Of Div Footer -->
+                <div class="footer">
+                    <br>
+                    <hr>
+                    <!-- Start Of Div Social Icons -->
+                    <div class="social-icons">
+                        <a class="facebook" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+                        <a class="twitter" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
+                        <a class="googleplus" href="https://plus.google.com/discover"><i class="fab fa-google-plus"></i></a>
+                        <a class="linkedin" href="https://ie.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+                        <a class="github" href="https://github.com/"><i class="fab fa-github-square"></i></a>
+                    </div>
+                    <!-- End Of Div Social Icons -->
+                </div> 
+                <!-- End Of Div Footer -->
+            </div>
+            <!-- End Of Div Main -->
+        </body>
     </html>   
 
