--- a/WEBLAB1-3/education.html
+++ b/WEBLAB1-3/education.html
@@ -4,18 +4,22 @@
         <title>CV: Stephen Gregan</title>
     </head>
         <body>
+            <!-- Start Of Div Main -->
             <div class="main">
+                <!-- Start Of Div Header -->
                 <div class="header">
                     <a href="index.html">Home</a>    
-                        <a href="homepage.html">CV Page</a>
-                        <a href="profile.html">Profile</a>
-                        <a href="workExperience.html">Work Experience</a>
-                        <a href="education.html">Education</a>
-                        <a href="selfStudies.html">Self Studies</a>
-                        <a href="skills.html">Skills</a>
-                        <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
-                        <a href="contactInformation.html">Contact Information</a>
+                    <a href="homepage.html">CV Page</a>
+                    <a href="profile.html">Profile</a>
+                    <a href="workExperience.html">Work Experience</a>
+                    <a href="education.html">Education</a>
+                    <a href="selfStudies.html">Self Studies</a>
+                    <a href="skills.html">Skills</a>
+                    <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
+                    <a href="contactInformation.html">Contact Information</a>
                 </div>
+                <!-- End Of Div Header -->
+                <!-- Start Of Div Content -->
                 <div class="content">
                     <h1>Education</h1>
                         <h2><i>CCT College Dublin</h2>
@@ -32,10 +36,14 @@
                                     <small>I was testing software doing manual testing and automation testing.</small>
                                     <hr>
                 </div>
+                <!-- End Of Div Content -->
+                <!-- Start Of Div Footer -->
                 <div class="footer">
                      <img src="C:\Users\Stephen\Desktop\_WEBDEV\WEBLAB1-3\img\3A4wkht.png" alt="Mr Robot" width="500" height="500">
                 </div>  
+                <!-- End Of Div Footer -->
             </div>
+            <!-- End Of Div Main -->
         </body>
 </html>   
 
