--- a/WEBLAB1-3/profile.html
+++ b/WEBLAB1-3/profile.html
@@ -4,7 +4,9 @@
         <title>CV: Stephen Gregan</title>
     </head>
         <body>
+            <!-- Start Of Div Main -->
             <div class="main">
+                <!-- Start Of Div Header -->
                 <div class="header">
                     <a href="index.html">Home</a>    
                         <a href="homepage.html">CV Page</a>
@@ -16,15 +18,21 @@
                         <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
                         <a href="contactInformation.html">Contact Information</a>
                 </div>
+                <!-- End Of Div Header -->
+                <!-- Start Of Div Content -->
                 <div class="content">
                     <h1>Profile</h1>
                         <p>Upcoming Software Developer with in-company application development experience, college studies and self study.  Experience in both <i>Software Testing</i> and <i>Software Development</i>.  Trained using <b>Agile</b> methodology.  Languages include <strong>Java</strong>, <em>C#</em> and <strong>SQL</strong>.  Proficient in various Microsoft Azure Cognitive Services.  In my spare time I am learning JavaScript along with Node.js.  I am also interested in learning Ruby and Ruby on Rails.  All my code is available to view on my GitHub Account: https://github.com/StephenGregan.</p>
                         <hr>
                 </div>
+                <!-- End Of Div Content -->
+                <!-- Start Of Div Footer -->
                 <div class="footer">
                      <img src="C:\Users\Stephen\Desktop\_WEBDEV\WEBLAB1-3\img\3A4wkht.png" alt="Mr Robot" width="500" height="500">
-                </div>  
+                </div> 
+                <!-- End Of Div Footer --> 
             </div>
+            <!-- End Of Div Main -->
         </body>
 </html>   
 
