--- a/WEBDEV2-2/contactInformation.html
+++ b/WEBDEV2-2/contactInformation.html
@@ -12,7 +12,9 @@
 		<div class="main">
 			<!-- Start Of Div Header -->
 	                <div class="header">
+	                	<!-- Start Of Unordered List -->
 	                	<ul>
+	                		<!-- List Elements -->
 	                	    <li><a href="index.html"><i class="fas fa-home"></i></a></li>
 					        <li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
 					        <li><a href="profile.html"><i class="fas fa-user-alt"></i></a></li>
@@ -21,8 +23,9 @@
 					        <li><a href="selfStudies.html"><i class="fas fa-book"></i></a></li>
 					        <li><a href="skills.html"><i class="fas fa-arrows-alt"></i></a></li>
 					        <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
-					        <li><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
+					        <li class="active"><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
 	    				</ul>
+	    				<!-- End Of Unordered List -->
 	                </div>
 	                <!-- End Of Div Header -->
 	        <!-- Start Of Div Content -->
