--- a/WEBDEV2-2/hobbiesAndInterests.html
+++ b/WEBDEV2-2/hobbiesAndInterests.html
@@ -12,7 +12,7 @@
     <div class="main">
         <!-- Start Of Div Header -->
         <div class="header">
-            <!-- Unordered List -->
+            <!-- Start OF Unordered List -->
             <ul>
                 <li><a href="index.html"><i class="fas fa-home"></i></a></li>
                 <li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
@@ -21,14 +21,16 @@
                 <li><a href="education.html"><i class="fas fa-graduation-cap"></i></a></li>
                 <li><a href="selfStudies.html"><i class="fas fa-book"></i></a></li>
                 <li><a href="skills.html"><i class="fas fa-arrows-alt"></i></a></li>
-                <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
+                <li class="active"><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
                 <li><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
             </ul>
+            <!-- End Of Unordered List -->
             </div>
             <!-- End Of Div Header -->
             <!-- Start Of Div Content -->
             <div class="content">
                 <h1 class="colourband">Hobbies & Interests</h1>
+                <!-- Start Of Ordered List -->
                 <ol style="list-style-type:disc">
                     <li>Football</li>
                     <li>Games</li>
@@ -36,6 +38,7 @@
                     <li>Computers (Hardware & Software)</li>
                     <li>Fantasy Books</li>
                 </ol>  
+                <!-- End OF Ordered List -->
             </div>
             <!-- End Of Div Content -->
             <!-- Start Of Div Footer -->
