--- a/WEBDEV2-2/homepage.html
+++ b/WEBDEV2-2/homepage.html
@@ -13,9 +13,10 @@
             <div class="main">
                 <!-- Start Of Div Header -->
                 <div class="header">
+                    <!-- Start Of Unordered List -->
                     <ul>
                         <li><a href="index.html"><i class="fas fa-home"></i></a></li>
-                        <li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
+                        <li class="active"><a href="homepage.html"><i class="fas fa-building"></i></a></li>
                         <li><a href="profile.html"><i class="fas fa-user-alt"></i></a></li>
                         <li><a href="workExperience.html"><i class="fas fa-briefcase"></i></a></li>
                         <li><a href="education.html"><i class="fas fa-graduation-cap"></i></a></li>
@@ -24,6 +25,7 @@
                         <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
                         <li><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
                     </ul>
+                    <!-- End Of Unordered List -->
                     </div>
                     <!-- End Of Div Header -->
                     <!-- Start Of Div Content -->
