--- a/WEBDEV2-2/skills.html
+++ b/WEBDEV2-2/skills.html
@@ -20,7 +20,7 @@
 	                    <li><a href="workExperience.html"><i class="fas fa-briefcase"></i></a></li>
 	                    <li><a href="education.html"><i class="fas fa-graduation-cap"></i></a></li>
 	                    <li><a href="selfStudies.html"><i class="fas fa-book"></i></a></li>
-	                    <li><a href="skills.html"><i class="fas fa-arrows-alt"></i></a></li>
+	                    <li class="active"><a href="skills.html"><i class="fas fa-arrows-alt"></i></a></li>
 	                    <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
 	                    <li><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
 	    			</ul>
@@ -29,7 +29,6 @@
 	            <!-- End Of Div Header -->
 	            <!-- Start Of Div Content -->
 	            <div class="content">
-
 	               	<h1 class="colourband">Skills</h1>
 	                <!-- Start Of Ordered List -->
 	                <ol class="skillscontent" style="list-style-type:disc">
