--- a/WEBLAB1-2/index.html
+++ b/WEBLAB1-2/index.html
@@ -41,6 +41,7 @@
                                     <!-- End Of Education Content -->
                     <!-- Start Of Self Studies Content -->
                     <h1>Self Studies</h1>
+                    <!-- Start Of Table Center -->
                        <table class="center">
                             <tr>
                                 <th class="colour"><b>Book Name</b></th>
@@ -63,8 +64,8 @@
                                 <td>Jeanne Boyarsky & Scott Selikoff</td>
                             </tr>
                         </table>
-                        <!-- End Of Self Studies Content -->
-                    <!-- Start Of Skills Content -->
+                        <!-- End Of Table Center -->
+                    <!-- Start Of Skills Content -->    
                     <h1>Skills</h1>
                         <p>Flexible and Adaptable</p>
                         <p>Enthusiastic and Committed</p>
@@ -85,8 +86,7 @@
                 </div>
                 <!-- End Of Div Content -->
                 <!-- Start Of Div Footer -->
-                <div class="footer">
-                    
+                <div class="footer">      
                 </div>  
                 <!-- End Of Div Footer -->
             </div>
