--- a/WEBLAB1-3/index.html
+++ b/WEBLAB1-3/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous"> -->
 </head>
 <body>
+    <!-- Stephen Gregan's -->
     <h1 class="firstneon" data-text="[Stephen Gregan's]">Stephen Gregan's</h1>
+    <!-- Curriculum Vitae -->
     <h1 class="secondneon" data-text="[Curriculum Vitae :)]">Curriculum Vitae :)</h1>
     <ul>
         <!-- Links -->
