--- a/WEBDEV2-1/index.html
+++ b/WEBDEV2-1/index.html
@@ -16,6 +16,7 @@
                 <div class="content">
                     <!-- Start Of Unordered List -->
                     <ul class="bubbles">
+                        <!-- Unordered List Elements -->
                         <li></li>
                         <li></li>
                         <li></li>
@@ -65,6 +66,7 @@
                                 <h4>November 2016 - April 2017</h4>
                                     <small>I was testing software doing manual testing and automation testing.</small>
                     <h1 class="colourband">Self Studies</h1>
+                        <!-- Start Of Table Center -->
                         <table class="center">
                             <tr>
                                 <th class="colour"><b>Book Name</b></th>
@@ -87,6 +89,7 @@
                                 <td>Jeanne Boyarsky & Scott Selikoff</td>
                             </tr>
                         </table>
+                        <!-- End Of Table Center -->
                     <h1 class="colourband">Skills</h1>
                         <p>Flexible and Adaptable</p>
                         <p>Enthusiastic and Committed</p>
@@ -103,7 +106,7 @@
                         <br>
                 </div>
                 <!-- End Of Div Content -->
-                Start Of Div Footer 
+                <!-- Start Of Div Footer  -->
                 <div class="footer">
                     <hr>
                     <p>@ Stephen Gregan 2018</p>
