--- a/WEBDEV2-2/education.html
+++ b/WEBDEV2-2/education.html
@@ -19,7 +19,7 @@
                     <li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
                     <li><a href="profile.html"><i class="fas fa-user-alt"></i></a></li>
                     <li><a href="workExperience.html"><i class="fas fa-briefcase"></i></a></li>
-                    <li><a href="education.html"><i class="fas fa-graduation-cap"></i></a></li>
+                    <li class="active"><a href="education.html"><i class="fas fa-graduation-cap"></i></a></li>
                     <li><a href="selfStudies.html"><i class="fas fa-book"></i></a></li>
                     <li><a href="skills.html"><i class="fas fa-arrows-alt"></i></a></li>
                     <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
