--- a/WEBDEV2-2/index.html
+++ b/WEBDEV2-2/index.html
@@ -8,9 +8,10 @@
 <body>
     <h1 class="firstneon" data-text="[Stephen Gregan's]">Stephen Gregan's</h1>
     <h1 class="secondneon" data-text="[Curriculum Vitae :)]">Curriculum Vitae :)</h1>
+    <!-- Start Of Unordered List -->
     <ul>
         <!-- Links -->
-        <li><a href="index.html"><i class="fas fa-home"></i></a></li>
+        <li class="active"><a href="index.html"><i class="fas fa-home"></i></a></li>
         <li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
         <li><a href="profile.html"><i class="fas fa-user-alt"></i></a></li>
         <li><a href="workExperience.html"><i class="fas fa-briefcase"></i></a></li>
@@ -20,6 +21,7 @@
         <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
         <li><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
     </ul>
+    <!-- End Of Unordered List -->
 </body>
 </html>
 
