--- a/WEBDEV2-2/profile.html
+++ b/WEBDEV2-2/profile.html
@@ -16,7 +16,7 @@
                     <ul>
                         <li><a href="index.html"><i class="fas fa-home"></i></a></li>
                         <li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
-                        <li><a href="profile.html"><i class="fas fa-user-alt"></i></a></li>
+                        <li class="active"><a href="profile.html"><i class="fas fa-user-alt"></i></a></li>
                         <li><a href="workExperience.html"><i class="fas fa-briefcase"></i></a></li>
                         <li><a href="education.html"><i class="fas fa-graduation-cap"></i></a></li>
                         <li><a href="selfStudies.html"><i class="fas fa-book"></i></a></li>
